cmake_minimum_required(VERSION 3.5)
project(hiho)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
        include.h
#        main.cpp
#        44-2.cpp
#        185.cpp
#        44-3bs.cpp
#        44-4.cpp
#        1601.cpp
#        1039.cpp
#        45-2.2.cpp
#        45-4.cpp
#        186.2.cpp
#        46-3.3.cpp
#        46-1.2.cpp
#        46-2.2.cpp
#        1678.cpp
#        1679.cpp
#        189.cpp
#        1015.cpp
#        1304.cpp
#        47-3.cpp
#        49-1.cpp
#        192.cpp
#        searchpro/1312.cpp
#        1109.cc
#        218keywordsfilter.cpp
#        218key2.cpp
#        1036.cpp
#        1107.cpp
#        1077.cpp
#        1077my.cpp
#        1078.cpp
#        1443.cpp
#        1049.cpp
         zhou267偶像的条件.cpp
        )
add_executable(hiho ${SOURCE_FILES})


